--- a/box.html
+++ b/box.html
@@ -4,10 +4,42 @@
         <meta charset="UTF-8">
         <title>Box Model</title>
         <style type="text/css">
-            *CSS here*/
+        .box{
+        width:300px;   
+        height: 300px;
+        background-color:#81BBC9;
+        margin: 50px;
+        border: 10px solid;
+        border-radius: 30px;  
+        }  
+
+        #box1{
+        border-radius:200px;
+        border: 10px solid;
+        }
+
+        #box2{
+        border-radius:200px;
+        }
+
+        #box3{
+        border: 1px solid;
+        background-color: yellow;
+        border-top-right-radius: 200px;
+        border-bottom-left-radius: 200px;
+        border-top-left-radius: 5px;
+        border-bottom-right-radius: 5px;
+        }
+
+
+
+
+
         </style>
     </head>
     <body>
-        <div class=""></div>
+        <div class="box" id="box1"></div>
+        <div class="box" id="box2"></div>
+        <div class="box" id="box3"></div>
     </body>
 </html>
