--- a/box2.html
+++ b/box2.html
@@ -12,6 +12,9 @@
             padding: 10px;
             border-radius: 0px;
             font-size: 0px;
+            -webkit-box-sizing: border-box;
+            -moz-box-sizing: border-box;
+            box-sizing: border-box;
         }
         .box {
              width: 100%;
@@ -27,27 +30,48 @@
         #sidebar {
             display: inline-block;
             font-size: 16px;
-            width: 470px;
+            width: 460px;
             height: 330px;
             margin-right:10px;
+            padding-left: 40px ;
+            padding-right: 40px ;
+            border:5px solid black;
+            -webkit-box-sizing: border-box;
+            -moz-box-sizing: border-box;
+            box-sizing: border-box;
         }            
 
         #content {
             display: inline-block;
             font-size: 16px;
-            width: 470px;
+            width: 460px;
             height: 330px;
             margin-left:10px;
+            padding-left: 40px ;
+            padding-right: 40px ;
+            border:5px solid black;
+           -webkit-box-sizing: border-box;
+            -moz-box-sizing: border-box;
+            box-sizing: border-box;
+
 
         </style>
     </head>
     <body>
         <div id="container">
             
-            <div class="box">Header</div>
-            <div class="box" id="sidebar">Sidebar</div>
-            <div class="box" id="content">Content</div>
-            <div class="box">Footer</div>
+            <div class="box"><h1>Header</h1></div>
+            <div class="box" id="sidebar">
+                <h2>Sidebar</h2>
+                <p>pennoplume middleway beni Mendaite polymasty transitoriness Rowena singability dysarthrosis comber reap helvell indistinguished Leptoptilus verticordious Iroha geodynamical orthoepist steelworker scientism Mazatec antiparalytic constructive benchboard</p>
+                <p>symbranchiate bioreaction epencephalic palaeolithist synarmogoid Dunlap conspiratorial fagottist tabulare nonclosure phylogenetically tetragamy blanketing biomagnetic browpost jiglike tartishly disciform tragic dysphrenia whilom comicocratic perjurious leucoquinizarin</p>
+            </div>
+            <div class="box" id="content">
+                <h2>Content</h2>
+                <p>symbranchiate bioreaction epencephalic palaeolithist synarmogoid Dunlap conspiratorial fagottist tabulare nonclosure phylogenetically tetragamy blanketing biomagnetic browpost jiglike tartishly disciform tragic dysphrenia whilom comicocratic perjurious leucoquinizarin</p>
+                <p>pennoplume middleway beni Mendaite polymasty transitoriness Rowena singability dysarthrosis comber reap helvell indistinguished Leptoptilus verticordious Iroha geodynamical orthoepist steelworker scientism Mazatec antiparalytic constructive benchboard</p>
+            </div>
+            <div class="box"><h2>Footer</h2></div>
         </div>
     </body>
 </html>
